# ghwm

./: .coveragerc  .editorconfig  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  TODO.md  pyproject.toml
.agents/rules/: python-code.md
.agents/skills/python-coding-standards/: SKILL.md
.agents/skills/testing-standards/: SKILL.md
.github/: auto_assign.yaml  dependabot.yaml  pr-title-checker-config.json  pull_request_template.md  super-linter-fix.env  super-linter.env
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  security_report.yml
.github/linters/: .gitleaks.toml  .markdown-lint.yml  .textlintignore  .textlintrc  .yaml-lint.yml  actionlint.yml  zizmor.yaml
.github/workflows/: auto-assign-pr.yml  linter.yaml  pr-title-check.yaml  release.yaml  tag.yaml  tests.yaml
docs/: ARCHITECTURE.md
src/ghwm/: __init__.py  __main__.py  cli.py  download.py  download_npm.py  install.py  lock.py  managed_files.py  manifest.py  package_names.py  paths.py  telemetry.py
tests/: shared.py  test_cli.py  test_download.py  test_download_npm.py  test_install.py  test_lock.py  test_manifest.py  test_security.py  test_telemetry.py
