[project]
name = "ghwm"
dynamic = ["version"]
description = "Install GitHub workflow files from a workflow marketplace."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = ["pyyaml>=6.0"]

[dependency-groups]
test = [
  "pytest>=8.0",
  "pytest-cov>=6.0",
]

lint = [
  "ruff>=0.4",
]

typecheck = [
  "mypy>=1.10",
  "types-PyYAML>=6.0",
]

build = [
  "build>=1.0",
]

dev = [
  { include-group = "test" },
  { include-group = "lint" },
  { include-group = "typecheck" },
  { include-group = "build" },
]

[tool.uv]
default-groups = ["dev"]

[project.scripts]
ghwm = "ghwm.cli:main"

[project.urls]
Repository = "https://github.com/pljanicki/ghwm"
Issues = "https://github.com/pljanicki/ghwm/issues"

[build-system]
requires = ["hatch-vcs", "hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
local_scheme = "no-local-version"

[tool.hatch.build.targets.wheel]
packages = ["src/ghwm"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=ghwm --cov-report=term-missing"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.isort]
profile = "black"
line_length = 120

[tool.mypy]
python_version = "3.12"
strict = true
