[project]
name = "ghwm"
dynamic = ["version"]
description = "Install GitHub workflow files from a workflow marketplace."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = ["pyyaml>=6.0"]
authors = [
  { name = "Pawel Lukasz Janicki" },
  { name = "Peter Meyer Elphick Frandsen" },
]
keywords = ["github", "github-actions", "workflow-manager", "cli", "ci-cd"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Build Tools",
  "Topic :: Software Development :: Version Control",
]

[dependency-groups]
test = [
  "pytest>=8.0",
  "pytest-cov>=6.0",
]

lint = [
  "ruff>=0.4",
]

typecheck = [
  "mypy>=1.10",
  "types-PyYAML>=6.0",
]

build = [
  "build>=1.0",
]

dev = [
  { include-group = "test" },
  { include-group = "lint" },
  { include-group = "typecheck" },
  { include-group = "build" },
]

[tool.uv]
default-groups = ["dev"]
exclude-newer = "7 days"

[project.scripts]
ghwm = "ghwm.cli:main"

[project.urls]
Repository = "https://github.com/ghwfxlab/ghwm"
Issues = "https://github.com/ghwfxlab/ghwm/issues"
"Pawel's GitHub" = "https://github.com/pljanicki"
"Peter's GitHub" = "https://github.com/petermefrandsen"

[build-system]
requires = ["hatch-vcs", "hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
local_scheme = "no-local-version"

[tool.hatch.build.targets.wheel]
packages = ["src/ghwm"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=ghwm --cov-report=term-missing --cov-report=xml --junitxml=junit.xml"
junit_family = "legacy"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "S", "UP", "RUF", "N"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S105", "S108"]

[tool.isort]
profile = "black"
line_length = 120

[tool.mypy]
python_version = "3.12"
strict = true
